# cells-life-v2

./: CMakeLists.txt  main.cpp
game/: Game.cpp  Game.h  game.cpp  game.h
game/cell/: Cell.cpp  Cell.h  cell.cpp  cell.h
game/cell/alive/: AliveCell.cpp  AliveCell.h
game/cell/color_scheme/: ColorScheme.cpp  ColorScheme.h  color_scheme.cpp  color_scheme.h
game/cell/color_scheme/energy/: EnergyColorScheme.cpp  EnergyColorScheme.h  energy_color_scheme.cpp  energy_color_scheme.h
game/config/: GameConfig.cpp  GameConfig.h  game_config.cpp  game_config.h
game/config/cell/: CellConfig.cpp  CellConfig.h  cell_config.cpp  cell_config.h
game/config/field/: FieldConfig.cpp  FieldConfig.h  field_config.cpp  field_config.h
game/field/: GameField.cpp  GameField.h  game_field.cpp  game_field.h
game/field/neighbors/: NeighborsField.cpp  NeighborsField.h
interface/: interface.h
interface/components/button/: Button.cpp  Button.h  button.cpp  button.h
interface/components/button/template/: ButtonTemplate.cpp  ButtonTemplate.h  button_template.cpp  button_template.h
interface/game_screen/: game_screen.cpp  game_screen.h
interface/menus/: Menu.cpp  Menu.h  menu.cpp  menu.h
interface/menus/game/: GameMenu.cpp  GameMenu.h  game_menu.cpp  game_menu.h
interface/menus/main/: MainMenu.cpp  MainMenu.h  main_menu.cpp  main_menu.h
interface/screen/: Screen.cpp  Screen.h  screen.cpp  screen.h
internal/renderable/: Renderable.cpp  Renderable.h  renderable.cpp
